# htm

./: .gitignore  HTM.py  IMPLEMENTATION_SUMMARY.md  README.md  TEST_README.md  __init__.py  base_encoder.py  building_blocks.py  example_usage.py  htm_core.py  manual_test.py  old_building_blocks.py  optimize.ipynb  optimize.py  optimize_tm_sine.py  pari.py  plan.md  plot_optimize.py  psuedo_code.py  pyproject.toml  rdse.py  spatial_pooler.py  test_building_blocks.py  visualizer_app.py
data/: rec-center-hourly.csv
src/: HTM.py  brain.py  hot_gym.py  hot_gym_2level.py  hot_gym_model.py  hot_gym_visualizer.py  manual_test.py  optimize.py
src/core/: brain.py
src/encoder_layer/: base_encoder.py  date_encoder.py  rdse.py
src/visualizer/: app.py  colors.py  connection_renderer.py  controls.py
src/visualizer/apps/: sine_visualizer.py
tests/: test_building_blocks.py  test_field_predictions.py  test_field_specific_prediction.py  test_rdse.py  test_real_data.py  test_run_predictive_columns.py  test_spatial_pooler.py  test_spatial_pooler_new.py  test_temporal_sequences.py
visualizer/: __init__.py  app.py  brain_renderer.py  colors.py  connection_renderer.py  controls.py  history.py  interactive.py  renderer3d.py  simulator.py
